Updated Integrated PhD students

--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -306,7 +306,7 @@
   email: abhayjindal.999@gmail.com
   guide: Vamsi Pritham Pingali
   scholarship: IISc
-  Webpage: https://sites.google.com/view/abhayjindal
+  webpage: https://sites.google.com/view/abhayjindal
   image: true
 
 - name: Babhrubahan Bose
