Updated Integrated PhD Students

--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -323,6 +323,7 @@
   image: true
   guide: Kaushal Verma
   scholarship: IISc
+  webpage: https://sites.google.com/view/aakanksha-jain
 
 
 - name: Arindam Mandal
@@ -473,7 +474,7 @@
   user-id: sourishparag
   image: true
 
-- name: Riehikesh Rajendra Ghatage
+- name: Rieshikesh Rajendra Ghatage
   year-of-joining: 2020
   programme: Integrated PhD
   user-id: rieshikeshr
