--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -20,7 +20,7 @@
   area: "Combinatorics, Infinite-dimensional Lie algebras, Spectral graph theory"
   start: "2021"
   end: "2021"
-  present:  
+  present: "IIT, Dharwad" 
 
 - name: "Anupam Gumber"  
   position: "NBHM"
