--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -152,11 +152,11 @@
 
 
 - name: Manoj Kumar
-  phd: 
+  phd: IIT Delhi 
   user-id: manojkumar1
   position: NBHM 
   image: true
-  research-area:   
+  research-area: Harmonic Analysis   
 
 
 
