--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -185,6 +185,14 @@
   author-names:
     - Manjunath Krishnapur
 
+- name: Arka Mallick
+  user-id: arkamallick
+  position: Assistant Professor
+  research-areas: Partial differential equations, variational methods, non-linear functional analysis
+  phd: TIFR-CAM
+  phone-ext: 
+  office: 
+
 - name: A. K. Nandakumaran
   user-id: nands
   position: Professor
