--- a/_data/publ.yaml
+++ b/_data/publ.yaml
@@ -1606,6 +1606,20 @@
   mrclass: '35B27 (35K20)'
   volume: '112'
 
+- number: '1'
+  author: 'Mandal, Kalidas and Sain, Debmalya and Mal, Arpita and Paul, Kallol'
+  fjournal: 'Advances in Operator Theory'
+  url: 'https://doi.org/10.1007/s43036-021-00167-w'
+  pages: 'Paper No. 3, 19'
+  year: '2022'
+  title: 'Norm attainment set and symmetricity of operators on $\ell_p^2$'
+  doi: '10.1007/s43036-021-00167-w'
+  issn: '2662-2009'
+  journal: 'Adv. Oper. Theory'
+  mrnumber: '4333773'
+  mrclass: '47L05 (46B20)'
+  volume: '7'
+
 - number: '9'
   author: 'Jiang, Chunlan and Ji, Kui and Misra, Gadadhar'
   fjournal: 'Journal of Functional Analysis'
@@ -8084,6 +8098,20 @@
   mrclass: '65R20 (45E05 45J05 45L05)'
   volume: '79'
 
+- number: '16'
+  author: 'Sain, Debmalya'
+  fjournal: 'Linear and Multilinear Algebra'
+  url: 'https://doi.org/10.1080/03081087.2019.1702917'
+  pages: '3010--3018'
+  year: '2021'
+  title: 'Smoothness and norm attainment of bounded bilinear operators between Banach spaces'
+  doi: '10.1080/03081087.2019.1702917'
+  issn: '0308-1087'
+  journal: 'Linear Multilinear Algebra'
+  mrnumber: '4338342'
+  mrclass: '46G25 (46B20)'
+  volume: '69'
+
 - number: '8'
   author: 'Varma, H. M. and Banerjee, B. and Nandakumaran, A. K. and Vasu, R. M. and Roy, D.'
   fjournal: 'Current Science'
@@ -10320,6 +10348,17 @@
   mrclass: '65W05 (65P05)'
   volume: '30'
 
+- mrnumber: '4309656'
+  pages: 'Art. No. 11, 19'
+  year: '2021'
+  publisher: 'Schloss Dagstuhl. Leibniz-Zent. Inform., Wadern'
+  booktitle: '2nd Conference on Information-Theoretic Cryptography'
+  title: 'Locally reconstructable non-malleable secret sharing'
+  author: 'Kanukurthi, Bhavana and Obbattu, Sai Lakshmi Bhavana and Sekar, Sruthi and Tomy, Jenit'
+  series: 'LIPIcs. Leibniz Int. Proc. Inform.'
+  mrclass: '94A62'
+  volume: '199'
+
 - number: '8'
   author: 'Maitra, Anwoy'
   fjournal: 'Proceedings of the American Mathematical Society'
@@ -10414,21 +10453,6 @@
   issn: '0161-1712'
   journal: 'Int. J. Math. Math. Sci.'
   mrnumber: '2439004'
-
-- number: '7'
-  author: 'Banerjee, Abhishek'
-  fjournal: 'Comptes Rendus Math\''ematique. Acad\''emie des Sciences. Paris'
-  url: 'http://dx.doi.org/10.1016/j.crma.2016.05.005'
-  pages: '665--670'
-  year: '2016'
-  mrreviewer: 'George Ciprian Modoi'
-  title: 'Some remarks on a theorem of Bergman'
-  doi: '10.1016/j.crma.2016.05.005'
-  issn: '1631-073X'
-  journal: 'C. R. Math. Acad. Sci. Paris'
-  mrnumber: '3508561'
-  mrclass: '18E15 (03E10 18G05)'
-  volume: '354'
 
 - author: 'Behera, Kiran Kumar'
   fjournal: 'Linear Algebra and its Applications'
@@ -10718,6 +10742,35 @@
   mrnumber: '1630091'
   mrclass: '73F99 (73N20 86A04)'
   volume: '4'
+
+- number: '7'
+  author: 'Banerjee, Abhishek'
+  fjournal: 'Comptes Rendus Math\''ematique. Acad\''emie des Sciences. Paris'
+  url: 'http://dx.doi.org/10.1016/j.crma.2016.05.005'
+  pages: '665--670'
+  year: '2016'
+  mrreviewer: 'George Ciprian Modoi'
+  title: 'Some remarks on a theorem of Bergman'
+  doi: '10.1016/j.crma.2016.05.005'
+  issn: '1631-073X'
+  journal: 'C. R. Math. Acad. Sci. Paris'
+  mrnumber: '3508561'
+  mrclass: '18E15 (03E10 18G05)'
+  volume: '354'
+
+- number: '1'
+  author: 'Choudhury, Projesh Nath and Sivakumar, K. C.'
+  fjournal: 'Advances in Operator Theory'
+  url: 'https://doi.org/10.1007/s43036-021-00171-0'
+  pages: 'Paper No. 7, 11'
+  year: '2022'
+  title: 'Nesbitt and Shapiro cyclic sum inequalities for positive definite matrices'
+  doi: '10.1007/s43036-021-00171-0'
+  issn: '2662-2009'
+  journal: 'Adv. Oper. Theory'
+  mrnumber: '4343968'
+  mrclass: '15A45 (15B57 26D15 47A63)'
+  volume: '7'
 
 - number: '3'
   author: 'Gudi, Thirupathi and Guzm\''an, Johnny'
@@ -11504,6 +11557,20 @@
   mrnumber: '3979699'
   mrclass: '32A25 (32A38 46E20 46J15)'
   volume: '13'
+
+- number: '16'
+  author: 'Chattopadhyay, Arup and Sain, Debmalya and Senapati, Tanusri'
+  fjournal: 'Linear and Multilinear Algebra'
+  url: 'https://doi.org/10.1080/03081087.2019.1702916'
+  pages: '2998--3009'
+  year: '2021'
+  title: 'characterization of symmetric points in $l^n_p$-spaces'
+  doi: '10.1080/03081087.2019.1702916'
+  issn: '0308-1087'
+  journal: 'Linear Multilinear Algebra'
+  mrnumber: '4338341'
+  mrclass: '47L05 (46B20)'
+  volume: '69'
 
 - number: '1'
   author: 'Ravindran, Renuka and Prasad, Phoolan'
