Updated 2021 PhD students List

--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -554,6 +554,21 @@
   user-id: sushobhandas
   image: true
   
+- name: Ritabrata Das
+  year-of-joining: 2021
+  program: PhD
+  user-id: ritabratadas
+  image: true
 
+- name: Sudeshna Bhattacharjee
+  year-of-joining: 2021
+  program: PhD
+  user-id: sudeshnab
+  image: true
 
+- name: Ashutosh Suresh Jangle
+  year-of-joining: 2021
+  program: PhD
+  user-id: ashutoshjs
+  image: true  
 
