Updated 2021 PhD students

--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -556,19 +556,19 @@
   
 - name: Ritabrata Das
   year-of-joining: 2021
-  program: PhD
+  programme: PhD
   user-id: ritabratadas
   image: true
 
 - name: Sudeshna Bhattacharjee
   year-of-joining: 2021
-  program: PhD
+  programme: PhD
   user-id: sudeshnab
   image: true
 
 - name: Ashutosh Suresh Jangle
   year-of-joining: 2021
-  program: PhD
+  programme: PhD
   user-id: ashutoshjs
   image: true  
 
