--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -63,9 +63,9 @@
   research-area: Low-dimensional geometry
 
 
-- name : Debamalya Sain 
+- name : Debmalya Sain 
   phd: Jadavpur
-  user-id: debamalyasain
+  user-id: debmalyasain
   position: UGC Kothari
   image: true
   research-area: Geometry of normed linear spaces
