--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -74,8 +74,8 @@ jan2022:
     timing: 'Mon, Wed, Fri: 2:00 - 3:00'
     venue: LH-4
   electives:
-  - name: Stochastic Finance
-    code: MA 263
+  - name: Stochastic Finance II
+    code: MA 366
     instructor: Srikanth Iyer
     timing: 'Tue, Thu 11:30-1:00'
     venue: LH-5 
