Updated Inspire Fellow and Postdocs

--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -17,5 +17,9 @@
   user-id : mithunb
   image: true
 
-
+- name: Sushma Palimar, (Ph.D., NITK, Surathkal)
+  position: DST WOSA
+  research-areas: Algebraic number theory
+  user-id : psushma
+  image: true
 
