--- a/_data/publ.yaml
+++ b/_data/publ.yaml
@@ -16079,21 +16079,6 @@
   mrclass: '42C05 (43A65)'
   volume: '142'
 
-- number: '3'
-  author: 'Bhattacharyya, T. and Mohandas, J. P.'
-  fjournal: 'Proceedings of the Edinburgh Mathematical Society. Series II'
-  url: 'http://dx.doi.org/10.1007/1-4020-2623-4_2'
-  pages: '531--547'
-  year: '2005'
-  mrreviewer: 'Bruce A. Watson'
-  title: 'Two-parameter uniformly elliptic Sturm-Liouville problems with eigenparameter-dependent boundary conditions'
-  doi: '10.1007/1-4020-2623-4_2'
-  issn: '0013-0915'
-  journal: 'Proc. Edinb. Math. Soc. (2)'
-  mrnumber: '2171182'
-  mrclass: '34B08 (34B24)'
-  volume: '48'
-
 - number: '1'
   author: 'Misra, Gadadhar'
   fjournal: 'Indian Journal of Pure and Applied Mathematics'
@@ -16621,6 +16606,35 @@
   mrnumber: '4048471'
   mrclass: '20D15 (20C25)'
   volume: '23'
+
+- number: '3'
+  author: 'Bhattacharyya, T. and Mohandas, J. P.'
+  fjournal: 'Proceedings of the Edinburgh Mathematical Society. Series II'
+  url: 'http://dx.doi.org/10.1007/1-4020-2623-4_2'
+  pages: '531--547'
+  year: '2005'
+  mrreviewer: 'Bruce A. Watson'
+  title: 'Two-parameter uniformly elliptic Sturm-Liouville problems with eigenparameter-dependent boundary conditions'
+  doi: '10.1007/1-4020-2623-4_2'
+  issn: '0013-0915'
+  journal: 'Proc. Edinb. Math. Soc. (2)'
+  mrnumber: '2171182'
+  mrclass: '34B08 (34B24)'
+  volume: '48'
+
+- number: '5'
+  author: 'Ganguly, Pritam and Manna, Ramesh and Thangavelu, Sundaram'
+  fjournal: 'Journal of Functional Analysis'
+  url: 'https://doi.org/10.1016/j.jfa.2021.109351'
+  pages: 'Paper No. 109351, 31'
+  year: '2022'
+  title: 'On a theorem of Chernoff on rank one Riemannian symmetric spaces'
+  doi: '10.1016/j.jfa.2021.109351'
+  issn: '0022-1236'
+  journal: 'J. Funct. Anal.'
+  mrnumber: '4354861'
+  mrclass: '43A85 (22E30 33D45 43A25)'
+  volume: '282'
 
 - number: '1'
   author: 'Carstensen, Carsten and Mallik, Gouranga and Nataraj, Neela'
