6-IIS-NDM articles retrieved

--- a/_data/publ.yaml
+++ b/_data/publ.yaml
@@ -50,6 +50,20 @@
   mrclass: '35L65 (35L02 35L40 35L60 35L67 58J45 74J40)'
   volume: '126'
 
+- number: '1'
+  author: 'Banerjee, Abhishek'
+  fjournal: 'Indiana University Mathematics Journal'
+  url: 'https://doi.org/10.1512/iumj.2021.70.8267'
+  pages: '81--119'
+  year: '2021'
+  title: 'On Noetherian schemes over $( C, \otimes, 1)$ and the category of quasi-coherent sheaves'
+  doi: '10.1512/iumj.2021.70.8267'
+  issn: '0022-2518'
+  journal: 'Indiana Univ. Math. J.'
+  mrnumber: '4226649'
+  mrclass: '14F06 (14A30 18F20 18M15)'
+  volume: '70'
+
 - number: '2'
   author: 'Sachdev, P. L. and Srinivasa Rao, Ch. and Joseph, K. T.'
   fjournal: 'Studies in Applied Mathematics'
@@ -607,6 +621,20 @@
   mrclass: '46H05 (30H10 46H25)'
   volume: '164'
 
+- number: '3'
+  author: 'Bhosle, Usha N.'
+  fjournal: 'Indian Journal of Pure and Applied Mathematics'
+  url: 'https://doi.org/10.1007/s13226-019-0347-2'
+  pages: '635--664'
+  year: '2019'
+  title: 'Recent results on vector bundles, principal bundles and related topics'
+  doi: '10.1007/s13226-019-0347-2'
+  issn: '0019-5588'
+  journal: 'Indian J. Pure Appl. Math.'
+  mrnumber: '3995080'
+  mrclass: '14-02 (14J60 53C05)'
+  volume: '50'
+
 - number: '2'
   author: 'Mukherji, Utpal'
   fjournal: 'Institute of Electrical and Electronics Engineers. Transactions on Information Theory'
@@ -862,6 +890,20 @@
   mrnumber: '3311218'
   mrclass: '60J10 (05A17 60C05 82C23)'
   volume: '20'
+
+- number: '3'
+  author: 'Ghosh, Subhroshekhar and Krishnapur, Manjunath'
+  fjournal: 'Communications in Mathematical Physics'
+  url: 'https://doi.org/10.1007/s00220-021-04254-0'
+  pages: '1205--1234'
+  year: '2021'
+  title: 'Rigidity hierarchy in random point fields: random polynomials and determinantal processes'
+  doi: '10.1007/s00220-021-04254-0'
+  issn: '0010-3616'
+  journal: 'Comm. Math. Phys.'
+  mrnumber: '4340929'
+  mrclass: '60G55 (60G15 60G57)'
+  volume: '388'
 
 - number: '3-4'
   author: 'Nandakumaran, A. K. and George, Raju K.'
@@ -1751,21 +1793,6 @@
   mrclass: '35B27 (35B40 35J20 35J25 78M40 80M40)'
   volume: '82'
 
-- number: '1'
-  author: 'Bera, Sayani and Pal, Ratna'
-  fjournal: 'Complex Analysis and its Synergies'
-  url: 'https://doi.org/10.1186/s40627-016-0006-x'
-  pages: 'Paper No. 2, 22'
-  year: '2016'
-  mrreviewer: 'M. Klimek'
-  title: 'Dynamics of semigroups of entire maps of $\Bbb{C}^k$'
-  doi: '10.1186/s40627-016-0006-x'
-  issn: '2197-120X'
-  journal: 'Complex Anal. Synerg.'
-  mrnumber: '3544399'
-  mrclass: '32H02 (32H50)'
-  volume: '2'
-
 - number: '3'
   author: 'Mohanty, R. K. and Sachdev, P. L. and Jha, Navnit'
   fjournal: 'Applied Mathematics and Computation'
@@ -1908,6 +1935,50 @@
   mrnumber: '3164504'
   mrclass: '35R03 (35A02 35H20 35K08 35Q41 43A80)'
   volume: '95'
+
+- number: '1'
+  author: 'Bera, Sayani and Pal, Ratna'
+  fjournal: 'Complex Analysis and its Synergies'
+  url: 'https://doi.org/10.1186/s40627-016-0006-x'
+  pages: 'Paper No. 2, 22'
+  year: '2016'
+  mrreviewer: 'M. Klimek'
+  title: 'Dynamics of semigroups of entire maps of $\Bbb{C}^k$'
+  doi: '10.1186/s40627-016-0006-x'
+  issn: '2197-120X'
+  journal: 'Complex Anal. Synerg.'
+  mrnumber: '3544399'
+  mrclass: '32H02 (32H50)'
+  volume: '2'
+
+- number: '13'
+  author: 'Bhosle, Usha N. and Singh, Sanjay Kumar'
+  fjournal: 'International Mathematics Research Notices. IMRN'
+  url: 'https://doi.org/10.1093/imrn/rny136'
+  pages: '3991--4015'
+  year: '2020'
+  mrreviewer: 'Emre Coskun'
+  title: 'Fourier-Mukai transform on a compactified Jacobian'
+  doi: '10.1093/imrn/rny136'
+  mrclass: '14F08 (14H40 18G80)'
+  issn: '1073-7928'
+  journal: 'Int. Math. Res. Not. IMRN'
+  mrnumber: '4120316'
+
+- number: '1'
+  author: 'Roth, Julien and Upadhyay, Abhitosh'
+  fjournal: 'Results in Mathematics'
+  url: 'https://doi.org/10.1007/s00025-019-1142-4'
+  pages: 'Paper No. 20, 25'
+  year: '2020'
+  mrreviewer: 'Leonard Todjihounde'
+  title: '$f$-biharmonic submanifolds of generalized space forms'
+  doi: '10.1007/s00025-019-1142-4'
+  issn: '1422-6383'
+  journal: 'Results Math.'
+  mrnumber: '4045154'
+  mrclass: '53C42 (53C43)'
+  volume: '75'
 
 - number: '4'
   author: 'Sachdev, P. L. and Joseph, K. T. and Haque, M. Ejanul'
@@ -2923,6 +2994,19 @@
   publisher: 'Springer, New York'
   mrclass: '06A07 (47D03 60J05)'
   volume: '71'
+
+- author: 'Reif, Shifra and Venkatesh, R.'
+  fjournal: 'Journal of Algebra'
+  url: 'https://doi.org/10.1016/j.jalgebra.2021.11.007'
+  pages: '402--423'
+  year: '2022'
+  title: 'On tensor products of irreducible integrable representations'
+  doi: '10.1016/j.jalgebra.2021.11.007'
+  issn: '0021-8693'
+  journal: 'J. Algebra'
+  mrnumber: '4343717'
+  mrclass: '17B10 (17B67)'
+  volume: '592'
 
 - author: 'Choudhury, Projesh Nath and Tsatsomeros, Michael J.'
   fjournal: 'Linear Algebra and its Applications'
@@ -3996,6 +4080,18 @@
   mrclass: '20F55 (16S99 17B37 20C08)'
   volume: '80B'
 
+- series: 'Ramanujan Mathematical Society Lecture Notes Series'
+  mrnumber: '3137669'
+  pages: 'xx+218'
+  year: '2013'
+  editor: 'Flenner, Hubert and Patil, Dilip P.'
+  booktitle: 'Proceedings of the conference held in honor of Balwant Singh, Uwe Storch and Rajendra V. Gurjar at the Indian Institute of Science, Bangalore, December 6--10, 2010'
+  title: 'Commutative algebra and algebraic geometry (CAAG-2010)'
+  publisher: 'Ramanujan Mathematical Society, Mysore'
+  isbn: '978-93-80416-10-6'
+  mrclass: '14-06 (13-06)'
+  volume: '17'
+
 - number: '7'
   author: 'M\"uller, Gerd and Patil, D. P.'
   fjournal: 'Communications in Algebra'
@@ -4250,6 +4346,21 @@
   mrnumber: '1910670'
   mrclass: '37D45 (34C28)'
   volume: '296'
+
+- number: '1'
+  author: 'Lin, Alice and McSpirit, Eleanor and Vishnu, Adit'
+  fjournal: 'Research in Number Theory'
+  url: 'https://doi.org/10.1007/s40993-019-0177-7'
+  pages: 'Paper No. 2, 15'
+  year: '2020'
+  mrreviewer: 'Jeremy Lovejoy'
+  title: 'Algebraic relations between partition functions and the $j$-function'
+  doi: '10.1007/s40993-019-0177-7'
+  issn: '2522-0160'
+  journal: 'Res. Number Theory'
+  mrnumber: '4045194'
+  mrclass: '11F37 (11F03 11P81 11P82)'
+  volume: '6'
 
 - number: '3'
   author: 'Kreuzer, Martin and Patil, Dilip P.'
@@ -5100,19 +5211,6 @@
   mrclass: '37F05 (37F10)'
   volume: '28'
 
-- number: '4'
-  author: 'Prasad, Phoolan and Ravindran, Renuka'
-  fjournal: 'Journal of Mathematical and Physical Sciences'
-  pages: '361--364'
-  year: '1984'
-  mrreviewer: 'Reza Malek-Madani'
-  title: 'Canonical form of a quasilinear hyperbolic system of first order equations'
-  issn: '0047-2557'
-  journal: 'J. Math. Phys. Sci.'
-  mrnumber: '803963'
-  mrclass: '35L65'
-  volume: '18'
-
 - author: 'Bhosle, Usha N. and Biswas, Indranil'
   fjournal: 'Geometriae Dedicata'
   url: 'https://doi.org/10.1007/s10711-015-0108-2'
@@ -5462,6 +5560,34 @@
   mrclass: '47A13 (46E22 47A15 47A20 47A45)'
   volume: '523'
 
+- number: '3'
+  author: 'Bhosle, Usha N. and Singh, Sanjay'
+  fjournal: 'Indian Academy of Sciences. Proceedings. Mathematical Sciences'
+  url: 'https://doi.org/10.1007/s12044-016-0290-7'
+  pages: '329--339'
+  year: '2016'
+  mrreviewer: 'Cristian V. Anghel'
+  title: 'Weak point property and sections of Picard bundles on a compactified Jacobian over a nodal curve'
+  doi: '10.1007/s12044-016-0290-7'
+  issn: '0253-4142'
+  journal: 'Proc. Indian Acad. Sci. Math. Sci.'
+  mrnumber: '3531852'
+  mrclass: '14H60 (14D20)'
+  volume: '126'
+
+- number: '4'
+  author: 'Prasad, Phoolan and Ravindran, Renuka'
+  fjournal: 'Journal of Mathematical and Physical Sciences'
+  pages: '361--364'
+  year: '1984'
+  mrreviewer: 'Reza Malek-Madani'
+  title: 'Canonical form of a quasilinear hyperbolic system of first order equations'
+  issn: '0047-2557'
+  journal: 'J. Math. Phys. Sci.'
+  mrnumber: '803963'
+  mrclass: '35L65'
+  volume: '18'
+
 - number: '2'
   author: 'Nandakumaran, A. K. and Ratnakumar, P. K.'
   fjournal: 'Journal of Functional Analysis'
@@ -5569,6 +5695,21 @@
   mrnumber: '1667206'
   mrclass: '90D40 (90A16 92D15 92D50)'
   volume: '125'
+
+- number: '3-4'
+  author: 'Bhosle, Usha N.'
+  fjournal: 'Manuscripta Mathematica'
+  url: 'https://doi.org/10.1007/s00229-018-1002-7'
+  pages: '361--385'
+  year: '2018'
+  mrreviewer: 'Sanjay Amrutiya'
+  title: 'Embedding of a compactified Jacobian and theta divisors'
+  doi: '10.1007/s00229-018-1002-7'
+  issn: '0025-2611'
+  journal: 'Manuscripta Math.'
+  mrnumber: '3858407'
+  mrclass: '14H60'
+  volume: '157'
 
 - number: '1'
   author: 'Maity, Dipendu and Upadhyay, Ashish Kumar'
@@ -8041,6 +8182,21 @@
   mrclass: '32H02 (32J18 32L05 53C24)'
   volume: '25'
 
+- number: '6'
+  author: 'Biswas, Indranil and Mj, Mahan and Seshadri, Harish'
+  fjournal: 'Communications in Contemporary Mathematics'
+  url: 'https://doi.org/10.1142/S0219199712500381'
+  pages: '1250038, 24'
+  year: '2012'
+  mrreviewer: 'Alexandru Dimca'
+  title: '3-manifold groups, K\"ahler groups and complex surfaces'
+  doi: '10.1142/S0219199712500381'
+  issn: '0219-1997'
+  journal: 'Commun. Contemp. Math.'
+  mrnumber: '2989642'
+  mrclass: '57M50 (14F35 32J15 32Q15)'
+  volume: '14'
+
 - number: '3'
   author: 'Gupta, Rajeev and Misra, Gadadhar'
   fjournal: 'Studia Mathematica'
@@ -9686,6 +9842,19 @@
   title: 'Kinematical conservation laws applied to study geometrical shapes of a solitary wave'
   mrclass: '76B15 (76B25 76E30)'
 
+- url: 'https://doi.org/10.1007/978-3-319-91548-7_27'
+  mrnumber: '3828291'
+  pages: '349--361'
+  year: '2018'
+  publisher: 'Springer, Cham'
+  booktitle: 'Theory, numerics and applications of hyperbolic problems. II'
+  title: 'Kinematical conservation laws in inhomogeneous media'
+  doi: '10.1007/978-3-319-91548-7\_27'
+  author: 'Baskar, S. and Murti, R. and Prasad, P.'
+  series: 'Springer Proc. Math. Stat.'
+  mrclass: '35L65 (35L67)'
+  volume: '237'
+
 - series: 'Pitman Research Notes in Mathematics Series'
   mrnumber: '1632047'
   pages: 'viii+243'
@@ -10908,6 +11077,18 @@
   mrclass: '73K03 (70L05)'
   volume: '56'
 
+- number: '6'
+  author: 'Khare, Apoorva and Tao, Terence'
+  fjournal: 'American Journal of Mathematics'
+  pages: '1863--1929'
+  year: '2021'
+  title: 'On the sign patterns of entrywise positivity preservers in fixed dimension'
+  issn: '0002-9327'
+  journal: 'Amer. J. Math.'
+  mrnumber: '4349135'
+  mrclass: '15B48 (05E05 15B35 26A48 30B10)'
+  volume: '143'
+
 - url: 'http://dx.doi.org/10.1007/978-0-8176-8337-5_6'
   mrnumber: '2961381'
   pages: '99--109'
@@ -11935,20 +12116,6 @@
   mrclass: '65N30 (65N15 76D07 76M10)'
   volume: '34'
 
-- number: '4'
-  author: 'Lai, King-Fai and Longhi, Ignazio and Suzuki, Takashi and Tan, Ki-Seng and Trihan, Fabien'
-  fjournal: 'Algebra \& Number Theory'
-  url: 'https://doi.org/10.2140/ant.2021.15.863'
-  pages: '863--907'
-  year: '2021'
-  title: 'On the $\mu$-invariants of abelian varieties over function fields of positive characteristic'
-  doi: '10.2140/ant.2021.15.863'
-  issn: '1937-0652'
-  journal: 'Algebra Number Theory'
-  mrnumber: '4265349'
-  mrclass: '11R23 (11G10 14J27)'
-  volume: '15'
-
 - number: '5'
   author: 'Kabiraj, Arpan'
   fjournal: 'Algebraic \& Geometric Topology'
@@ -12234,6 +12401,41 @@
   mrnumber: '3112849'
   mrclass: '93B05 (35L05 35L20 93C20)'
   volume: '83'
+
+- mrnumber: '2840856'
+  pages: 'i--viii and 1183--2173'
+  year: '2010'
+  editor: 'Bhatia, Rajendra and Pal, Arup and Rangarajan, G. and Srinivas, V. and Vanninathan, M.'
+  note: 'Invited lectures, Held in Hyderabad, August 19--27, 2010'
+  title: 'Proceedings of the International Congress of Mathematicians. Volume III'
+  mrclass: '00B20'
+  publisher: 'Hindustan Book Agency, New Delhi; distributed by World Scientific Publishing Co. Pte. Ltd., Singapore'
+  isbn: '978-81-85931-08-3; 978-981-4324-33-5; 981-4324-33-7'
+
+- mrnumber: '4179368'
+  pages: '59--72'
+  year: '[2020] \copyright 2020'
+  publisher: 'Springer, Singapore'
+  booktitle: 'Modular forms and related topics in number theory'
+  title: 'Omega results for Fourier coefficients of half-integral weight and Siegel modular forms'
+  author: 'Das, Soumya'
+  series: 'Springer Proc. Math. Stat.'
+  mrclass: '11F30 (11F37 11F46 11N37)'
+  volume: '340'
+
+- number: '4'
+  author: 'Lai, King-Fai and Longhi, Ignazio and Suzuki, Takashi and Tan, Ki-Seng and Trihan, Fabien'
+  fjournal: 'Algebra \& Number Theory'
+  url: 'https://doi.org/10.2140/ant.2021.15.863'
+  pages: '863--907'
+  year: '2021'
+  title: 'On the $\mu$-invariants of abelian varieties over function fields of positive characteristic'
+  doi: '10.2140/ant.2021.15.863'
+  issn: '1937-0652'
+  journal: 'Algebra Number Theory'
+  mrnumber: '4265349'
+  mrclass: '11R23 (11G10 14J27)'
+  volume: '15'
 
 - number: '5'
   author: 'Mandal, B. N. and Chakrabarti, A.'
@@ -13285,6 +13487,16 @@
   mrnumber: '3161508'
   mrclass: '43A30'
   volume: '58'
+
+- mrnumber: '2840854'
+  pages: 'x+803'
+  year: '2010'
+  editor: 'Bhatia, Rajendra and Pal, Arup and Rangarajan, G. and Srinivas, V. and Vanninathan, M.'
+  note: 'Plenary lectures and ceremonies, Held in Hyderabad, August 19--27, 2010'
+  title: 'Proceedings of the International Congress of Mathematicians. Volume I'
+  mrclass: '00B20'
+  publisher: 'Hindustan Book Agency, New Delhi; distributed by World Scientific Publishing Co. Pte. Ltd., Singapore'
+  isbn: '978-81-85931-08-3; 978-981-4324-31-1; 981-4324-31-0'
 
 - number: '3'
   author: 'Sinha, S. K. and Shrivastava, S. K.'
@@ -15074,6 +15286,21 @@
   title: 'Certain curves are set-theoretic complete intersections'
   mrclass: '13C40 (14M10)'
 
+- number: '3'
+  author: 'Bottazzi, Tamara and Conde, Cristian and Sain, Debmalya'
+  fjournal: 'Banach Journal of Mathematical Analysis'
+  url: 'https://doi.org/10.1007/s43037-019-00050-0'
+  pages: '1001--1018'
+  year: '2020'
+  mrreviewer: 'Kallol Paul'
+  title: 'A study of orthogonality of bounded linear operators'
+  doi: '10.1007/s43037-019-00050-0'
+  issn: '2662-2033'
+  journal: 'Banach J. Math. Anal.'
+  mrnumber: '4123321'
+  mrclass: '47A63 (47A30 47L05)'
+  volume: '14'
+
 - url: 'http://dx.doi.org/10.5802/tsg.264'
   mrnumber: '2654601'
   pages: '139--144'
@@ -15619,6 +15846,17 @@
   mrclass: '65F20 (65W05)'
   volume: '19'
 
+- mrnumber: '4353107'
+  pages: '139--164'
+  year: '[2020] \copyright 2020'
+  publisher: 'Hindustan Book Agency, Delhi'
+  booktitle: 'Elements of dynamical systems'
+  title: 'Complex dynamics'
+  author: 'Sridharan, Shrihari and Verma, Kaushal'
+  series: 'Texts Read. Math.'
+  mrclass: '37F10'
+  volume: '79'
+
 - number: '1'
   author: 'Surma Devi, C. D. and Nath, G.'
   fjournal: 'Proceedings of the National Academy of Sciences, India. Section A. Physical Sciences'
@@ -16078,6 +16316,18 @@
   mrnumber: '3251724'
   mrclass: '42C05 (43A65)'
   volume: '142'
+
+- author: 'Bharali, Gautam and Minda, David and Ponnusamy, Saminathan and Sahoo, Swadesh Kumar'
+  fjournal: 'The Journal of Analysis'
+  pages: 'i--ii'
+  year: '2013'
+  note: 'Held at the Indian Institute of Technology, Indore, December 28--30, 2013'
+  title: 'Preface [Proceedings of the International Symposium on Complex Analysis and Conformal Geometry (ISCACG 2013)]'
+  issn: '0971-3611'
+  journal: 'J. Anal.'
+  mrnumber: '3408013'
+  mrclass: '00B25 (00B30)'
+  volume: '21'
 
 - number: '1'
   author: 'Misra, Gadadhar'
@@ -16707,21 +16957,6 @@
   mrclass: '76Rxx (80A20)'
   volume: '84'
 
-- number: '10'
-  author: 'Banerjee, Abhishek'
-  fjournal: 'Communications in Algebra'
-  url: 'http://dx.doi.org/10.1080/00927872.2013.819434'
-  pages: '4548--4558'
-  year: '2014'
-  mrreviewer: 'Vanessa Miemietz'
-  title: 'Localization of monoid objects and Hochschild homology'
-  doi: '10.1080/00927872.2013.819434'
-  issn: '0092-7872'
-  journal: 'Comm. Algebra'
-  mrnumber: '3210395'
-  mrclass: '18D10 (16E40)'
-  volume: '42'
-
 - number: '4'
   author: 'B\''eg, O. Anwar and Takhar, H. S. and B\''eg, Tasveer A. and Chamkha, A. J. and Nath, G. and Majeed, Rui'
   fjournal: 'International Journal of Fluid Mechanics Research'
@@ -17049,6 +17284,31 @@
   mrnumber: '3347956'
   mrclass: '11F37 (11F11 11F32)'
   volume: '274'
+
+- mrnumber: '2840855'
+  pages: 'viii+1181'
+  year: '2010'
+  editor: 'Bhatia, Rajendra and Pal, Arup and Rangarajan, G. and Srinivas, V. and Vanninathan, M.'
+  note: 'Invited lectures, Held in Hyderabad, August 19--27, 2010'
+  title: 'Proceedings of the International Congress of Mathematicians. Volume II'
+  mrclass: '00B20'
+  publisher: 'Hindustan Book Agency, New Delhi; distributed by World Scientific Publishing Co. Pte. Ltd., Singapore'
+  isbn: '978-81-85931-08-3; 978-981-4324-32-8; 981-4324-32-9'
+
+- number: '10'
+  author: 'Banerjee, Abhishek'
+  fjournal: 'Communications in Algebra'
+  url: 'http://dx.doi.org/10.1080/00927872.2013.819434'
+  pages: '4548--4558'
+  year: '2014'
+  mrreviewer: 'Vanessa Miemietz'
+  title: 'Localization of monoid objects and Hochschild homology'
+  doi: '10.1080/00927872.2013.819434'
+  issn: '0092-7872'
+  journal: 'Comm. Algebra'
+  mrnumber: '3210395'
+  mrclass: '18D10 (16E40)'
+  volume: '42'
 
 - number: '1'
   author: 'Sen, Suparna'
